Bug 1061372 - [1/2] Remove event listener on screen orientation unlock.

--HG--
extra : rebase_source : 7ab058d153d18dfe518e97273d750c340e768a56