dom/base/nsScreen.cpp
@@ -305,6 +305,19 @@ void
 nsScreen::MozUnlockOrientation()
 {
   hal::UnlockScreenOrientation();
+
+  if (!mEventListener) {
+    return;
+  }
+
+  // Remove event listener in case of fullscreen lock.
+  nsCOMPtr<EventTarget> target = do_QueryInterface(GetOwner()->GetDoc());
+  if (target) {
+    target->RemoveSystemEventListener(NS_LITERAL_STRING("mozfullscreenchange"),
+                                      mEventListener, /* useCapture */ true);
+  }
+
+  mEventListener = nullptr;
 }
 
 bool
